_bergi/static/style.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, img, ins, kbd, q, s, samp,
small, strike, sub, sup, tt, var, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
a {
	color: inherit;
	text-decoration: none;
	cursor: pointer;
}
a:hover {
	color: #7288e1;
}

html {
	height: 100%;
	font-family: bergi-liberation, sans-serif;
}
*, *:before, *:after {
	box-sizing: border-box;
	text-rendering: optimizeLegibility;
}

/* like $height=45px */
nav {
	background-color: #000;
	max-height: 45px;
	color: #ddd;
	top: 0;
	transition: max-height 0.5s ease;
}
.nav * {
	display: inline-block;
	line-height: 45px;
	vertical-align: bottom!important;
}
.nav a:hover {
	color: #fff;
}
.logo {
	height: 25px;
	margin: 10px;
}
.nav-menu {
	float: right;
}
.nav-menu li {
	padding: 0 8px;
}
.dropsy {
	position: relative;
}
.dropsy > ul {
	display: none;
	background-color: #000;
	position: absolute;
	left: -2px;
	z-index: 1;
}
.dropsy:hover > ul {
	display: block;
}
.ingsoc {
	border-left: 1px solid #444;
	margin-left: 8px;
}
.ingsoc > * {
	padding: 0 8px;
}
a.fb:hover {
	color: #3b5998;
}
a.tw:hover {
	color: #1da1f2;
}
.btn-toggle {
	float: right;
	margin-right: 16px;
	display: none;
}
.mobile-unpacked {
	display: none;
}
@media screen and (max-width: 767px){
	.dropsy {
		display: none;
	}
	.btn-toggle {
		display: initial;
	}
	.mobile-unpacked {
		display: initial;
	}
	.nav {
		overflow: hidden;
	}
	.nav-menu {
		width: 100%;
		border-top: 1px solid #444;
	}
	.nav-menu ul,
	.nav-menu li,
	.nav-menu a {
		width: 100%;
	}
	.ingsoc {
		border: 0;
		margin-left: -4px;
	}
	.ingsoc a {
		width: initial;
	}
}

.cover {
	height: 60vh;
	margin-right: 4px;
	margin-bottom: 16px;
}
.cover-col {
	height: 100%!important;
}
.cover-block {
	height: 50%;
	padding: 4px 0 0 4px;
}
.cover-post {
	height: 100%; width: 100%;
	position: relative;
	background-size: cover;
	background-position: center center;
}
.cover-gradient {
	height: 100%; width: 100%;
	position: absolute;
	background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0), black);
}
.cover-header {
	position: absolute;
	bottom: 10%; left: 12px; right: 12px;
}
.cover-header h2 {
	color: #fff;
	font-size: 30px;
}
.cover-byline ul {
	color: #ccc;
	font-size: 14px;
	padding: 8px 0;
}
.cover-byline li {
	float: left;
}
.cover-byline li + li:before {
	content: "|";
	margin: 0 4px;
}
@media screen and (max-width: 767px){
	.cover {
		height: 90vh;
	}
	.cover-block {
		max-height: 30vh;
	}
	.cover-header h2 {
		font-size: 20px;
	}
}

/* generic content/aside layout */
.sheet {
	color: rgba(0, 0, 0, 0.84);
	max-width: 1000px;
	box-sizing: content-box;
	padding: 0 50px;
	margin: auto;
}
.content {
	max-width: 768px;
	padding-right: 32px;
	margin: auto;
}
@media screen and (max-width: 1023px){
	.content {
		padding: 0;
	}
	.aside {
		display: none;
	}
}
@media screen and (max-width: 767px){
	.sheet {
		margin: 0 4px;
		padding: 0;
	}
}

.river-post {
	border-top: 1px solid #ccc;
}
.river-img {
	width: 100%;
	padding-bottom: 56.25%;
	background-size: cover;
	background-position: center center;
	margin-bottom: 8px;
}
.river-header {
	padding: 12px;
}
.river-header h2 {
	font-size: 20px;
	margin-bottom: 8px;
}
.river-byline {
	font-size: 14px;
	color: #555;
}
.river-byline li {
	float: left;
}
.river-byline li + li:before {
	content: "|";
	margin: 4px;
}
.river-byline a {
	color: #92a8d1;
}
.load-more {
	display: block;
	text-align: center;
	width: 100%;
	padding: 12px 0;
	border: 1px solid #ccc;
	margin-bottom: 16px;
}
@media screen and (max-width: 767px){
	.river-post {
		padding: 8px 0;
	}
	.river-header h2 {
		font-size: 18px;
	}
	.river-img {
		padding-bottom: 66.6667%;
	}
}
@media screen and (max-width: 479px){
	.river-header h2 {
		font-size: 16px;
		font-weight: bold;
		color: rgba(0, 0, 0, 0.7);
	}
	.river-byline {
		font-size: 12px;
	}
}

.river-aside {
	margin-top: 48px;
	padding-left: 12px;
}
.river-aside .aside-hero {
	color: rgba(0, 0, 0, 0.7);
}
.river-aside .aside-title {
	color: rgba(0, 0, 0, 0.8);
}

.aside-hero {
	border-top: 4px solid #92a8d1;
	font-size: 18px;
	font-weight: bold;
	padding: 16px;
}
.aside-post {
	padding-bottom: 24px;
}
.aside-img {
	padding-bottom: 50%;
	margin-bottom: 12px;
	background-size: cover;
	background-position: center center;
}
.aside-title {
	font-size: 16px;
	font-weight: bold;
}

.article-hero {
	margin: 48px 20px 24px 20px;
}
.article-hero h1 {
	font-size: 32px;
	font-weight: 700;
	letter-spacing: -0.028em;
}
.article-byline {
	margin-top: 8px;
	color: #555;
}
.article-byline li {
	display: inline-block;
}
.article-byline li + li:before {
	content: ', ';
	margin-left: -4px;
}
.article-byline a {
	color: #7288e1;
}
.article-img {
	width: 100%;
	padding-bottom: 50%;
	background-size: cover;
	background-position: center center;
}
.article-text {
	margin: 32px 16px 0px 16px;
	font-family: bergi-charis, serif;
	font-size: 18px;
	line-height: 1.58;
	letter-spacing: -0.004em;
	word-break: break-word;
	border-bottom: 1px solid #ddd;
}
.article-text img {
	display: block;
	margin: auto;
	max-width: 100%;
}
.article-text p {
	margin-bottom: 30px;
}
.article-text a {
	color: #7288e1;
	text-decoration: underline;
}
.article-text h2 {
	font-family: bergi-liberation;
	font-weight: bold;
	font-size: 28px;
	line-height: 1.2;
	letter-spacing: -0.02em;
	margin-bottom: 8px;
}
.article-text blockquote {
	margin-left: 16px;
	font-style: italic;
}
.article-text ol {
	list-style-type: decimal;
	margin-bottom: 35px;
}
.article-text ul {
	list-style-type: disc;
	margin-bottom: 35px;
}
.article-text li {
	margin-left: 20px;
	margin-bottom: 14px;
}
.article-text li > p {
	display: inline;
}
.article-text pre {
	font-family: monospace;
	background-color: #f3f3f3;
	padding: 20px;
	margin-bottom: 30px;
}
.article-text code {
	font-size: 14px;
	background-color: #f3f3f3;
}

.article-tail {
	padding: 24px;
}
.article-tail-post {
	position: relative;
	height: 100px;
	background-size: cover;
	background-position: center center;
}
.article-tail-post a {
	display: inline-block;
	width: 100%; height: 100%;
}
.article-tail-title {
	position: absolute;
	bottom: 0; left: 0; right: 0;
	background-color: rgba(0, 0, 0, 0.6);
}
.article-tail-title h6 {
	padding: 8px;
	color: #fff;
	font-size: 13px;
	font-weight: bold;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}
@media screen and (max-width: 767px){
	.article-tail {
		padding: 20px 0;
	}
}

.article-aside {
	margin-top: 128px;
}
.article-aside > header {
	border-top: 5px solid #92a8d1;
	padding: 16px;
	font-weight: bold;
	font-size: 20px;
}

/* like $radius=100px */
.author {
	padding: 40px 0;
	margin: auto;
}
.author-hero {
	min-height: 100px;
}
.author-img {
	float: left;
	width: 100px;
	height: 100px;
	margin: 0 16px;
	border-radius: 100%;
	background-size: cover;
	background-position: center center;
}
.author-hero header {
	margin-left: 132px;
}
.author-hero h1 {
	padding: 16px;
	font-size: 32px;
	line-height: 1.2;
	font-weight: bold;
	word-break: break-word;
}
.author-bio {
	padding: 20px;
	margin-top: 20px;
	border-top: 1px solid #ddd;
}
.author-posts h1 {
	margin: 20px;
	font-size: 24px;
	font-weight: bold;
}
.author-posts {
	max-width: 800px;
	margin: auto;
}
@media screen and (max-width: 767px){
	.author-hero > * {
		margin: 0 12px;
	}
	.author-hero h1 {
		font-size: 24px;
	}
}

.list-hero {
	margin: 48px 12px 24px;
}
.list-hero h1 {
	font-size: 32px;
	font-weight: bold;
	margin-bottom: 12px;
}

.paginator {
	margin: 20px 14px;
	line-height: 1.8;
}
.paginator .page {
	padding: 4px;
	border: 1px solid #ddd;
}
.paginator .disabled {
	color: rgba(0, 0, 0, 0.7);
	border: 1px solid #fff;
}

/* like $height=45px */
body {
	position: relative;
	margin: 0;
	min-height: 100%;
	padding-bottom: 45px;
}
.footer {
	position: absolute;
	bottom: 0; left: 0; right: 0;
	background-color: #000;
	color: #ccc;
	font-size: 13px;
	height: 45px;
}
.footer ul {
	width: 100%;
	text-align: center;
}
.footer li {
	display: inline-block;
	line-height: 45px;
}
.footer li + li:before {
	content: "·";
	padding: 0 8px;
}

